Mobile vesion done
Adaptive versions for mobile devices

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="wrapper">
             <div class="header-wrapper">
                 <h2 class="section-title">Weather Here</h2>
-                <button class="upd-location">Update geolocation</button>
+                <button class="upd-location"><span>Update geolocation<span></button>
             </div>
         </div>
     </header>
