Clean HTML and add weather .svg-s

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         <div class="wrapper">
             <!-- CURRENT CITY STARTS -->
             <section class="current-city">
-                <div class="current-city-base">
+                <div>
                     <h3 class="current-city-name">Saint-Petersburg</h3>
                     <div class="current-icon-and-degree">
-                        <img src="./img/svg/water.svg" width="128" height="128" alt="rain" class="current-city-icon">
-                        <p class="current-city-degrees">3 &#176</p>
+                        <img src="./img/svg/cloud.svg" width="128" height="128" alt="rain" class="current-city-icon">
+                        <p>3 &#176</p>
                     </div>
                 </div>
                 <ul class="city-weather-desc">
@@ -38,19 +38,19 @@
                     </li>
                     <li class="weather-detail">
                         <b>Cloud cover</b>
-                        <p class="detail-desc">Broken clouds</p>
+                        <p>Broken clouds</p>
                     </li>
                     <li class="weather-detail">
                         <b>Pressure</b>
-                        <p class="detail-desc">1013 mb</p>
+                        <p>1013 mb</p>
                     </li>
                     <li class="weather-detail">
                         <b>Humidity</b>
-                        <p class="detail-desc">48%</p>
+                        <p>48%</p>
                     </li>
                     <li class="weather-detail">
                         <b>Coordinates</b>
-                        <p class="detail-desc">[59.48, 30.42]</p>
+                        <p>[59.48, 30.42]</p>
                     </li>
                 </ul>
             </section>
@@ -61,18 +61,18 @@
                 <div class="favourites-header">
                     <h2 class="section-title">Favourites</h2>
                     <form class="add-form">
-                        <fieldset class="add-form-wrapper">
+                        <fieldset>
                             <input type="text" name="new-city" class="add-city-field" placeholder="Add new city">
                             <button class="action-button">+</button>
                         </fieldset>
                     </form>
                 </div>
                 <ul class="favourite-cities">
-                    <li class="favourite-city">
+                    <li>
                         <div class="favourite-city-header">
-                            <h3 class="favourite-city-name">Moscow</h3>
-                            <p class="favourite-city-degrees">5 &#176</p>
-                            <img src="./img/svg/water.svg" alt="rain" width="48" height="48">
+                            <h3 class="favourite-city-name">Ufa</h3>
+                            <p class="favourite-city-degrees">-10 &#176</p>
+                            <img src="./img/svg/snowflake.svg" alt="rain" width="40" height="40">
                             <button class="action-button cross-button">+</button>
                         </div>
                         <ul class="city-weather-desc">
@@ -82,27 +82,27 @@
                             </li>
                             <li class="weather-detail">
                                 <b>Cloud cover</b>
-                                <p class="detail-desc">Broken clouds</p>
+                                <p>Broken clouds</p>
                             </li>
                             <li class="weather-detail">
                                 <b>Pressure</b>
-                                <p class="detail-desc">1013 mb</p>
+                                <p>1013 mb</p>
                             </li>
                             <li class="weather-detail">
                                 <b>Humidity</b>
-                                <p class="detail-desc">48%</p>
+                                <p>48%</p>
                             </li>
                             <li class="weather-detail">
                                 <b>Coordinates</b>
-                                <p class="detail-desc">[59.48, 30.42]</p>
+                                <p>[59.48, 30.42]</p>
                             </li>
                         </ul>
                     </li>
-                    <li class="favourite-city">
+                    <li>
                         <div class="favourite-city-header">
                             <h3 class="favourite-city-name">Moscow</h3>
-                            <p class="favourite-city-degrees">5 &#176</p>
-                            <img src="./img/svg/water.svg" alt="rain" width="48" height="48">
+                            <p class="favourite-city-degrees">-3 &#176</p>
+                            <img src="./img/svg/drop.svg" alt="rain" width="40" height="40">
                             <button class="action-button cross-button">+</button>
                         </div>
                         <ul class="city-weather-desc">
@@ -112,27 +112,27 @@
                             </li>
                             <li class="weather-detail">
                                 <b>Cloud cover</b>
-                                <p class="detail-desc">Broken clouds</p>
+                                <p>Broken clouds</p>
                             </li>
                             <li class="weather-detail">
                                 <b>Pressure</b>
-                                <p class="detail-desc">1013 mb</p>
+                                <p>1013 mb</p>
                             </li>
                             <li class="weather-detail">
                                 <b>Humidity</b>
-                                <p class="detail-desc">48%</p>
+                                <p>48%</p>
                             </li>
                             <li class="weather-detail">
                                 <b>Coordinates</b>
-                                <p class="detail-desc">[59.48, 30.42]</p>
+                                <p>[59.48, 30.42]</p>
                             </li>
                         </ul>
                     </li>
-                    <li class="favourite-city">
+                    <li>
                         <div class="favourite-city-header">
-                            <h3 class="favourite-city-name">Moscow</h3>
-                            <p class="favourite-city-degrees">5 &#176</p>
-                            <img src="./img/svg/water.svg" alt="rain" width="48" height="48">
+                            <h3 class="favourite-city-name">Kazan</h3>
+                            <p class="favourite-city-degrees">-7 &#176</p>
+                            <img src="./img/svg/lighting.svg" alt="rain" width="40" height="40">
                             <button class="action-button cross-button">+</button>
                         </div>
                         <ul class="city-weather-desc">
@@ -142,27 +142,27 @@
                             </li>
                             <li class="weather-detail">
                                 <b>Cloud cover</b>
-                                <p class="detail-desc">Broken clouds</p>
+                                <p>Broken clouds</p>
                             </li>
                             <li class="weather-detail">
                                 <b>Pressure</b>
-                                <p class="detail-desc">1013 mb</p>
+                                <p>1013 mb</p>
                             </li>
                             <li class="weather-detail">
                                 <b>Humidity</b>
-                                <p class="detail-desc">48%</p>
+                                <p>48%</p>
                             </li>
                             <li class="weather-detail">
                                 <b>Coordinates</b>
-                                <p class="detail-desc">[59.48, 30.42]</p>
+                                <p>[59.48, 30.42]</p>
                             </li>
                         </ul>
                     </li>
-                    <li class="favourite-city">
+                    <li>
                         <div class="favourite-city-header">
-                            <h3 class="favourite-city-name">Moscow</h3>
-                            <p class="favourite-city-degrees">5 &#176</p>
-                            <img src="./img/svg/water.svg" alt="rain" width="48" height="48">
+                            <h3 class="favourite-city-name">Paris</h3>
+                            <p class="favourite-city-degrees">12 &#176</p>
+                            <img src="./img/svg/sun.svg" alt="rain" width="40" height="40">
                             <button class="action-button cross-button">+</button>
                         </div>
                         <ul class="city-weather-desc">
@@ -172,27 +172,27 @@
                             </li>
                             <li class="weather-detail">
                                 <b>Cloud cover</b>
-                                <p class="detail-desc">Broken clouds</p>
+                                <p>Broken clouds</p>
                             </li>
                             <li class="weather-detail">
                                 <b>Pressure</b>
-                                <p class="detail-desc">1013 mb</p>
+                                <p>1013 mb</p>
                             </li>
                             <li class="weather-detail">
                                 <b>Humidity</b>
-                                <p class="detail-desc">48%</p>
+                                <p>48%</p>
                             </li>
                             <li class="weather-detail">
                                 <b>Coordinates</b>
-                                <p class="detail-desc">[59.48, 30.42]</p>
+                                <p>[59.48, 30.42]</p>
                             </li>
                         </ul>
                     </li>
-                    <li class="favourite-city">
+                    <li>
                         <div class="favourite-city-header">
-                            <h3 class="favourite-city-name">Moscow</h3>
-                            <p class="favourite-city-degrees">5 &#176</p>
-                            <img src="./img/svg/water.svg" alt="rain" width="48" height="48">
+                            <h3 class="favourite-city-name">New-York</h3>
+                            <p class="favourite-city-degrees">8 &#176</p>
+                            <img src="./img/svg/cloud.svg" alt="rain" width="40" height="40">
                             <button class="action-button cross-button">+</button>
                         </div>
                         <ul class="city-weather-desc">
@@ -202,27 +202,27 @@
                             </li>
                             <li class="weather-detail">
                                 <b>Cloud cover</b>
-                                <p class="detail-desc">Broken clouds</p>
+                                <p>Broken clouds</p>
                             </li>
                             <li class="weather-detail">
                                 <b>Pressure</b>
-                                <p class="detail-desc">1013 mb</p>
+                                <p>1013 mb</p>
                             </li>
                             <li class="weather-detail">
                                 <b>Humidity</b>
-                                <p class="detail-desc">48%</p>
+                                <p>48%</p>
                             </li>
                             <li class="weather-detail">
                                 <b>Coordinates</b>
-                                <p class="detail-desc">[59.48, 30.42]</p>
+                                <p>[59.48, 30.42]</p>
                             </li>
                         </ul>
                     </li>
-                    <li class="favourite-city">
+                    <li>
                         <div class="favourite-city-header">
-                            <h3 class="favourite-city-name">Moscow</h3>
-                            <p class="favourite-city-degrees">5 &#176</p>
-                            <img src="./img/svg/water.svg" alt="rain" width="48" height="48">
+                            <h3 class="favourite-city-name">London</h3>
+                            <p class="favourite-city-degrees">7 &#176</p>
+                            <img src="./img/svg/drop.svg" alt="rain" width="40" height="40">
                             <button class="action-button cross-button">+</button>
                         </div>
                         <ul class="city-weather-desc">
@@ -232,19 +232,19 @@
                             </li>
                             <li class="weather-detail">
                                 <b>Cloud cover</b>
-                                <p class="detail-desc">Broken clouds</p>
+                                <p>Broken clouds</p>
                             </li>
                             <li class="weather-detail">
                                 <b>Pressure</b>
-                                <p class="detail-desc">1013 mb</p>
+                                <p>1013 mb</p>
                             </li>
                             <li class="weather-detail">
                                 <b>Humidity</b>
-                                <p class="detail-desc">48%</p>
+                                <p>48%</p>
                             </li>
                             <li class="weather-detail">
                                 <b>Coordinates</b>
-                                <p class="detail-desc">[59.48, 30.42]</p>
+                                <p>[59.48, 30.42]</p>
                             </li>
                         </ul>
                     </li>
