Preloader for current weather done

--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
                     </li>
                 </ul>
             </section>
+            <div class="loader hidden">
+                <img src="./img/svg/inf-load.svg" alt="loader-logo">
+                <p>Current data is loading ...</p>
+            </div>
             <!-- CURRENT CITY ENDS -->
 
             <!-- FAVOURITES STARTS -->
@@ -103,12 +107,12 @@
                     </ul>
                 </div>
             </template>
-            <template id="loader-tmp">
+            <!-- <template id="loader-tmp">
                 <div class="loader">
                     <img src="./img/svg/inf-load.svg" alt="loader-logo">
                     <p>Current data is loading ...</p>
                 </div>
-            </template>
+            </template> -->
             <!-- FAVOURITES ENDS -->
         </div>
     </main>
