--- a/index.html
+++ b/index.html
@@ -106,5 +106,9 @@
     </main>
     <!-- MAIN ENDS -->
 </body>
+<script src="./js/apiResponser.js"></script>
+<script src="./js/initializer.js"></script>
+<script src="./js/cardCreater.js"></script>
+<script src="./js/additionFav.js"></script>
 <script src="./js/main.js"></script>
 </html>
