Promise.all fixed

--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
                 </li>
             </ul>
         </section>
-        <div id="loader" class="hidden">
+        <!-- <div id="loader" class="hidden">
             <img src="./img/svg/inf-load.svg" alt="loader-logo">
             <p>Current data is loading ...</p>
-        </div>
+        </div> -->
         <!-- CURRENT CITY ENDS -->
 
         <!-- FAVOURITES STARTS -->
@@ -102,6 +102,13 @@
                 </ul>
             </div>
         </template>
+
+        <template id="load-tmp">
+            <div id="loader">
+                <img src="./img/svg/inf-load.svg" alt="loader-logo">
+                <p>Current data is loading ...</p>
+            </div>
+        </template>    
         <!-- FAVOURITES ENDS -->
     </main>
     <!-- MAIN ENDS -->
