Conneced with 3rd lab

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- HEADER STARTS -->
     <header>
         <h2 class="section-title">Weather Here</h2>
-        <button id="upd-location" onclick="initCurrent()"><span>Update geolocation<span></button>
+        <button id="upd-location" onclick="initCurr()"><span>Update geolocation<span></button>
     </header>
     <!-- HEADER ENDS -->
 
@@ -62,7 +62,7 @@
                 <form id="add-form">
                     <fieldset>
                         <input id="add-city-field" type="text" name="new-city" placeholder="Add new city">
-                        <button id="action-button" onclick="addFavourite()"></button>
+                        <button id="action-button" onclick="addFav()"></button>
                     </fieldset>
                 </form>
             </div>
@@ -113,9 +113,10 @@
     </main>
     <!-- MAIN ENDS -->
 </body>
-<script src="./js/apiResponser.js"></script>
+<!-- <script src="./js/apiResponser.js"></script>
 <script src="./js/initializer.js"></script>
 <script src="./js/cardCreater.js"></script>
 <script src="./js/additionFav.js"></script>
-<script src="./js/main.js"></script>
+<script src="./js/main.js"></script> -->
+<script src="./js/index.js"></script>
 </html>
